# MAFM

./: .gitignore  README.md  pyproject.toml
mafm/: MAFM_test.db  agents.py  directory_structure.py  embedding.py  embedding_test.py  fileops.py  nohup.out  observer.py  save_to_vectordb.py  shell.py  sqlite.py  vectorDb.py  watchdog.sh
mafm/C_library/: fileops.c  fileops.h
mafm/MAFM_test/: ..db  MAFM_test.db  coding.db  dir1.db  dir2.db  dir3.db  download.db  filesystem.db  report.db  text10.txt  text8.txt  text9.txt
mafm/MAFM_test/coding/: algorithm_explanations.txt  coding.db  javascript_guide.txt  python_notes.txt
mafm/MAFM_test/coding/test_code/: test_code.db
mafm/MAFM_test/dir1/: text1.txt  text2.txt  text3.txt
mafm/MAFM_test/dir2/: text4.txt  text5.txt
mafm/MAFM_test/dir3/: text6.txt  text7.txt
mafm/MAFM_test/download/: download.db  product_catalog.txt  sample_invoice.txt  user_manual.txt
mafm/MAFM_test/report/: employee_feedback.txt  financial_report_2023.txt  market_analysis.txt  report.db  test.txt
mafm/agent/: agents.py  graph.py  tools.py
mafm/agent/agents/: analyst.py  member.py  supervisor.py  tools.py
mafm/rag/: MAFM_test.db  embedding.py  fileops.py  filesystem.db  sqlite.py  vectorDb.py  watchdog.py
mafm/rag/C_library/: fileops.c
mafm/temp/tmp4jkqj0xj/: test_code
