[tool.poetry]
name = "mafm"
version = "0.1.0"
description = ""
authors = ["sehwan505 <sehwan505@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <3.13"
pyautogen = "^0.3.0"
openai = "^1.47.0"
sentence-transformers = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
